--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/swagger": "^7.4.0",
     "event-sourcing-nestjs": "^1.1.4",
     "mo": "^1.7.3",
+    "mysql2": "^3.11.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "shallow-equal-object": "^1.1.1"
+    "shallow-equal-object": "^1.1.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
