--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@nestjs/schedule": "^4.1.0",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
-    "event-sourcing-nestjs": "^1.1.4",
+    "event-sourcing-nestjs": "^1.0.3",
     "mo": "^1.7.3",
-    "mysql2": "^3.11.0",
+    "mysql2": "3.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "shallow-equal-object": "^1.1.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "rimraf": "^3.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -57,6 +58,9 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "mongodb": "^3.5.2"
   },
   "jest": {
     "moduleFileExtensions": [
