--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/axios": "3.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.7",
@@ -28,14 +30,16 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "@ocoda/event-sourcing": "^1.0.0-beta.21",
+    "axios": "1.7.5",
+    "ejs": "^3.1.10",
     "mo": "^1.7.3",
+    "mongodb": "^5.8.0",
     "mysql2": "3.0.1",
     "reflect-metadata": "^0.2.0",
     "rimraf": "^3.0.0",
     "rxjs": "^7.8.1",
     "shallow-equal-object": "^1.1.1",
-    "typeorm": "^0.3.20",
-    "mongodb": "^5.8.0"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -59,6 +63,14 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "@ocoda/event-sourcing": {
+      "mongodb": "^5.8.0"
+    },
+    "typeorm": {
+      "mongodb": "^5.8.0"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
