api returns properly

--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,5 @@ DATABASE_NAME="plug_api"
 PORT=3001
 AUTH0_ISSUER_URL="https://plug-org.eu.auth0.com/"
 AUTH0_AUDIENCE="https://api.plug.org.pl"
+AUTHO_OAUTH_CLIENT_ID="XdxR7lMgbwhmyEhpyMzNZzjicINwr96O"
+AUTHO_REDIRECT_URI="http://localhost:3001/openapi/oauth2-redirect"
