--- a/.env.local
+++ b/.env.local
@@ -8,3 +8,8 @@ AUTH0_ISSUER_URL="https://plug-org.eu.auth0.com/"
 AUTH0_AUDIENCE="https://api.plug.org.pl"
 AUTHO_OAUTH_CLIENT_ID="XdxR7lMgbwhmyEhpyMzNZzjicINwr96O"
 AUTHO_REDIRECT_URI="http://localhost:3001/openapi/oauth2-redirect"
+AUTH0_API_CLIENT_ID="0A2WGeYFjGHXzVxL5MEzpsRl7XIU9KDf"
+AUTH0_API_CLIENT_SECRET="YAvyO3Cnb553cZjufUvyPxSFEz9hcmOvvTHjxqKu58qONGiYOjG9_toO_4-8YHRz"
+AUTH0_API_AUDIENCE="https://plug-org.eu.auth0.com/api/v2/"
+HONEYCOMB_API_URL="https://api.honeycomb.io"
+HONEYCOMB_API_KEY="sfebP2aHfs0OQftDEIJJiB"
