issuing card google

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "auth0": "^4.9.0",
     "axios": "1.7.5",
     "ejs": "^3.1.10",
+    "google-auth-library": "^9.14.1",
     "jwks-rsa": "^3.1.0",
     "mo": "^1.7.3",
     "mongodb": "^5.8.0",
