--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 ISSUER_BASE_URL="https://plug-org.eu.auth0.com/"
 AUDIENCE="https://api.plug.org.pl"
+GOOGLE_APPLICATION_CREDENTIALS="src/credentials.json"
