--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ISSUER_BASE_URL="https://plug-org.eu.auth0.com/"
 AUDIENCE="https://api.plug.org.pl"
 GOOGLE_APPLICATION_CREDENTIALS="src/credentials.json"
+GOOGLE_PASS_ISSUER_ID="3388000000022199474"
